# verity

./: .gitignore  Cargo.toml
src/: app.rs  cli.rs  config.rs  event_loop.rs  lib.rs  main.rs
src/agent/: classifier.rs  executor.rs  mod.rs  orchestrator.rs  planner.rs  synthesizer.rs  tools.rs
src/agent/researcher/: context.rs  extractor.rs  loop_module.rs  mod.rs  picker.rs  prompt.rs
src/agent/tools/: local.rs  mod.rs  registry.rs
src/app/: mod.rs  types.rs
src/auth/: login.rs  mod.rs  store.rs
src/fs/: diff.rs  mod.rs  read.rs  walk.rs  write.rs
src/llm/: anthropic.rs  google.rs  mod.rs  nvidia.rs  ollama.rs  openai.rs  provider.rs
src/search/: mod.rs  searxng.rs
src/shell/: mod.rs
src/ui/: answer.rs  autocomplete.rs  command.rs  error.rs  header.rs  layout.rs  mod.rs  model_select.rs  plan.rs  sources.rs  spinner.rs  status.rs  trace.rs
src/ui/markdown/: block.rs  mod.rs  table.rs
