[package]
name = "verity"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = "0.28"
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
similar = "2"
html2text = "0.12"
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
toml = "0.8"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"